@@ -73,7 +73,9 @@ const mvb = {
 						+
 							Round(sum(tapin_from_my_chain) * 50, 0)
 						+
-							Round(sum(takeover_good) * 20, 0)
+							Round(sum(takeover_good) * 10, 0)
+						+
+							Round(sum(takeover) * 10, 0)
 						+
 							Round(sum(tag) * 2, 0)
 						+
@@ -86,10 +88,6 @@ const mvb = {
 							Round(sum(long_hold) * 30, 0)
 						+
 							Round(sum(chain) * 20, 0)
-						--+
-						--	(count(*) filter (where result_half_win = result_half_lose) * 100)
-						--+
-						--	(sum(result_half_win) * 200)
 						+
 							CASE WHEN sum(flag_carry_distance) > 0 THEN sum(flag_carry_distance) / 2.5 ELSE 0 END
 				, 0)
@@ -157,35 +155,33 @@ const mvb = {
 					Round(
 							(cap * 100)
 						+
-							CASE WHEN cap >= 3 THEN 100 ELSE 0 END
+							CASE WHEN cap >= 3 THEN 300 ELSE 0 END
 						+
-							(cap_from_tapin * 25)
-						+
-							(cap_whilst_having_active_pup * 25)
-						+
-							(pup_rb + pup_jj * 25)
+							(pup_rb + pup_jj * 30)
 						+
 							(assist * 50)
 						+
-							CASE WHEN assist >= 3 THEN 100 ELSE 0 END
+							CASE WHEN assist >= 3 THEN 150 ELSE 0 END
 						+
 							(tapin_from_my_chain * 50)
 						+
-							(takeover_good * 5)
+							(takeover_good * 10)
+						+
+							(takeover * 10)
 						+
 							(tag * 2)
 						+
+							(grab * 2)
+						+
 							(hold / 2)
 						+
-							(flag_carry_distance / 10)
+							(prevent / 2)
 						+
-							(prevent / 4)
+							(long_hold * 30)
 						+
-							(long_hold * 50)
+							(chain * 20)
 						+
-							CASE WHEN cap > 0 THEN ((hold_before_cap / cap) * 150) ELSE 0 END
-						+
-							(chain * 15)
+							(flag_carry_distance / 2.5)
 					, 0)
 				`
 				break;
